# migchain

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.txt  README.md  pyproject.toml
examples/: README.md  graph.md  yoyo.ini
examples/migrations/analytics/: 20250104_00_create_schema.py
examples/migrations/analytics/user_events/: 20250104_01_create_user_events.py
examples/migrations/auth/: 20250101_00_create_schema.py
examples/migrations/auth/permissions/: 20250103_01_create_permissions.py
examples/migrations/auth/roles/: 20250101_02_create_roles.py
examples/migrations/auth/users/: 20250101_01_create_users.py
examples/migrations/billing/: 20250102_00_create_schema.py
examples/migrations/billing/plans/: 20250102_01_create_plans.py
examples/migrations/billing/plans/inserters/: 20250102_03_seed_plans.py
examples/migrations/billing/subscriptions/: 20250102_02_create_subscriptions.py
examples/migrations/notifications/: 20250103_00_create_schema.py
examples/migrations/notifications/events/: 20250103_03_create_events.py
examples/migrations/notifications/templates/: 20250103_02_create_templates.py
examples/migrations/notifications/templates/inserters/: 20250103_04_seed_templates.py
migchain/: __init__.py  __main__.py  constants.py  manager.py  types.py
migchain/application/: config.py  service.py
migchain/cli/: __init__.py  parser.py
migchain/core/: __init__.py  analyzer.py  config.py  dependency.py  graph.py  models.py
migchain/domain/: analyzer.py  dependency.py  graph.py  models.py  optimizer.py  planner.py  ports.py  scaffolder.py
migchain/infrastructure/: __init__.py  batch_tracker.py  logging.py  migration_writer.py  schema_comparator.py  yoyo_backend.py  yoyo_discovery.py
migchain/operations/: __init__.py  backend.py  batch_tracker.py  discovery.py  executor.py  planner.py
migchain/presentation/: __init__.py  cli.py  console.py  menu.py  plain.py
migchain/reporting/: __init__.py  logger.py  report.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/backend/connect/contract/: test_establishes_connection.py
tests/integration/backend/migration_operations/contract/: test_pending_applied_apply_rollback.py
tests/integration/batch_tracker/ensure_ready/contract/: test_creates_table.py
tests/integration/batch_tracker/ensure_ready/idempotency/: test_double_creation.py
tests/integration/batch_tracker/latest_batch/contract/: test_returns_latest_unapplied.py
tests/integration/batch_tracker/latest_batch/edge_cases/: test_no_batches_and_fully_rolled_back.py
tests/integration/batch_tracker/next_batch_number/contract/: test_sequential_numbers.py
tests/integration/batch_tracker/record_apply/contract/: test_records_migrations.py
tests/integration/batch_tracker/record_apply/edge_cases/: test_empty_ids.py
tests/integration/batch_tracker/record_rollback/contract/: test_records_rollback_op.py
tests/integration/discovery/discover_directories/contract/: test_walks_filesystem.py
tests/integration/discovery/discover_directories/edge_cases/: test_empty_and_init_only.py
tests/integration/discovery/read_migrations/contract/: test_reads_yoyo_migrations.py
tests/integration/discovery/read_migrations/rejections/: test_empty_paths.py
tests/integration/e2e/full_workflow/contract/: test_apply_rollback_cycle.py
tests/integration/optimizer/: conftest.py
tests/integration/optimizer/e2e/contract/: test_full_optimize_cycle.py
tests/integration/optimizer/e2e/edge_cases/: test_already_optimal.py  test_single_migration.py
tests/integration/optimizer/e2e/rejections/: fake_unsafe_comparator.py  test_missing_full_deps.py  test_schema_mismatch_halts.py
tests/integration/optimizer/migration_writer/contract/: test_rewrite_real_migrations.py
tests/integration/optimizer/schema_comparison/contract/: test_identical_schemas.py
tests/integration/optimizer/schema_comparison/rejections/: test_schema_mismatch.py
tests/integration/optimizer/transitive_reduction/contract/: test_real_graph_reduction.py
tests/unit/application/: conftest.py
tests/unit/application/config/: test_extract_database_name.py  test_migration_config.py
tests/unit/application/service/: conftest.py
tests/unit/domain/: conftest.py
tests/unit/domain/models/: test_domain_stats.py  test_migration_plan.py  test_migration_structure.py
tests/unit/domain/scaffolder/: conftest.py
tests/unit/presentation/: conftest.py
tests/unit/presentation/plain/contract/: test_debug.py  test_error.py  test_info.py  test_plain_presenter.py  test_prompt_scaffold_domain.py  test_prompt_scaffold_freeform.py  test_prompt_scaffold_table.py  (+7 more)
(+114 files in other folders)
