[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migchain"
version = "2.0.0"
description = "Database migration management tool with dependency graph analysis, phased execution, and batch tracking for yoyo-migrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AlanLatte" },
]
keywords = ["migrations", "database", "postgresql", "yoyo", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "yoyo-migrations>=8.0.0",
]

[project.scripts]
migchain = "migchain.__main__:main"

[project.urls]
Repository = "https://github.com/AlanLatte/MigChain"

[tool.hatch.build.targets.wheel]
packages = ["migchain"]
