[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migchain"
version = "2.0.1"
description = "Database migration management tool with dependency graph analysis, phased execution, and batch tracking for yoyo-migrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AlanLatte" }]
keywords = ["migrations", "database", "postgresql", "yoyo", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "yoyo-migrations>=8.0.0",
]

[project.optional-dependencies]
full = [
    "rich>=13.0.0",
    "InquirerPy>=0.3.0",
    "testcontainers[postgres]>=4.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.scripts]
migchain = "migchain.__main__:main"

[project.urls]
Repository = "https://github.com/AlanLatte/MigChain"

[dependency-groups]
linters = [
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "ruff>=0.12.8",
]
fmt = [
    "add-trailing-comma>=3.1.0",
    "ruff>=0.12.8",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-sugar>=1.0.0",
    "pytest-icdiff>=0.9",
    "testcontainers[postgres]>=4.0.0",
    "psycopg[binary]>=3.1.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["migchain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (PostgreSQL via testcontainers)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["migchain"]
omit = ["migchain/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501", "E203"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yoyo.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["InquirerPy.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disable_error_code = ["var-annotated", "type-arg", "attr-defined", "union-attr"]
